# ProjectFPS

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  toolchain.cmake
assets/models/: Street_environment_V01.mtl  TestMap.mtl
assets/shaders/: fragment.glsl  lit_fragment.glsl  lit_vertex.glsl  pointLightFragment.glsl  pointLightVertex.glsl  unlit_fragment.glsl  unlit_vertex.glsl  vertex.glsl
docs/: Description.md  Project.md
docs/Basic Prototype Stage/: ClassDiagram.drawio  Classes.md  Plan.md
docs/Basic Prototype Stage/Scene/: Scene.md
docs/Basic_Prototype_Stage/: Classes.md
docs/Basic_Prototype_Stage/Graphics/: Graphics.md
lib/include/glad/: glad.h
lib/src/: glad.c
src/: BSPNode.cpp  BSPTree.cpp  BoxCollider.cpp  Camera.cpp  Character.cpp  DirectionalLight.cpp  DynamicObject.cpp  Enemy.cpp  GLFWFactory.cpp  GLFWHandler.cpp  GLFWInput.cpp  Game.cpp  GameObject.cpp  InputHandler.cpp  Light.cpp  Map.cpp  Mesh.cpp  Model.cpp  Player.cpp  PointLight.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  ShaderProgram.cpp  StaticObject.cpp  WindowHandler.cpp  glad.c  main.cpp
src/game/: AssetManager.cpp  AssetManager.hpp  DebugMode.hpp  Game.cpp  Game.hpp
src/graphics/: Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  Texture.hpp  Vertex.hpp
src/headers/: BSPNode.hpp  Camera.hpp  Controllable.hpp  DebugMode.hpp  DirectionalLight.hpp  Enemy.hpp  GLFWFactory.hpp  GLFWHandler.hpp  GLFWInput.hpp  Game.hpp  GameObject.hpp  IPlatformFactory.hpp  Input.hpp  InputHandler.hpp  Light.cpp  Light.hpp  Map.hpp  Mesh.hpp  Model.hpp  Player.hpp  PointLight.hpp  Renderer.hpp  Scene.hpp  Shader.hpp  ShaderProgram.hpp  WindowHandler.hpp
src/physics/: BoxCollider.cpp  BoxCollider.hpp  ICollide.hpp
src/platform/: GLFWHandler.cpp  GLFWHandler.hpp  GLFWInput.cpp  GLFWInput.hpp
src/scene/: BSPNode.cpp  BSPNode.hpp  BSPTree.cpp  BSPTree.hpp  Camera.cpp  Camera.hpp  Character.hpp  DirectionalLight.cpp  DirectionalLight.hpp  DynamicObject.cpp  DynamicObject.hpp  Enemy.cpp  GameObject.cpp  GameObject.hpp  IControllable.hpp  Light.cpp  Light.hpp  Map.cpp  Map.hpp  NPC.cpp  NPC.hpp  Player.cpp  Player.hpp  PointLight.cpp  PointLight.hpp  Scene.cpp  Scene.hpp  StaticObject.cpp  StaticObject.hpp
